--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Pagina de prueba</h1>
+    <h1>Otra prueba</h1>
+    <h1>prueba 2</h1>
     <button>Boton</button>
 </body>
-</html>
+</html
